--- a/src/pages/homepage/homepage.module.css
+++ b/src/pages/homepage/homepage.module.css
@@ -1,3 +1,4 @@
 .homepage{
     background-color: #141414;
+    padding: 10px;
 }
